36 - Websocketes demo osszeallitasa
