# airport/src/main/java/hu/webuni/airport/web/FlightController.java
@@ -1,6 +1,7 @@
 package hu.webuni.airport.web;
 
 import java.lang.reflect.Method;
+import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Optional;
 
@@ -11,6 +12,7 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.querydsl.binding.QuerydslPredicate;
 import org.springframework.data.web.querydsl.QuerydslPredicateArgumentResolver;
 import org.springframework.http.ResponseEntity;
+import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.bind.support.WebDataBinderFactory;
 import org.springframework.web.context.request.NativeWebRequest;
@@ -24,6 +26,7 @@ import hu.webuni.airport.mapper.FlightMapper;
 import hu.webuni.airport.model.Flight;
 import hu.webuni.airport.repository.FlightRepository;
 import hu.webuni.airport.service.FlightService;
+import hu.webuni.airport.ws.DelayMessage;
 import lombok.RequiredArgsConstructor;
 
 @RestController
@@ -36,6 +39,8 @@ public class FlightController implements FlightControllerApi {
 	private final FlightMapper flightMapper;
 	
 	private final QuerydslPredicateArgumentResolver predicateResolver;
+	
+	private final SimpMessagingTemplate messagingTemplate;
 	
 	
 	@Override
@@ -88,6 +93,12 @@ public class FlightController implements FlightControllerApi {
 			e.printStackTrace();
 			throw new RuntimeException(e);
 		}
+	}
+
+	@Override
+	public ResponseEntity<Void> reportDelay(Long id, Integer delay) {
+		this.messagingTemplate.convertAndSend("/topic/delay/" + id, new DelayMessage(delay, OffsetDateTime.now()));
+		return ResponseEntity.ok().build();
 	}
 
 	
