# airport/src/main/openapi/airport-openapi.yml
@@ -294,6 +294,28 @@ paths:
                 type: string
                 format: binary
       operationId: downloadImage
+  '/api/flights/{id}/delay/{delay}':
+    parameters:
+      - schema:
+          type: integer
+          format: int64
+        name: id
+        in: path
+        required: true
+      - schema:
+          type: integer
+          format: int32
+        name: delay
+        in: path
+        required: true
+    put:
+      summary: ''
+      operationId: reportDelay()
+      responses:
+        '200':
+          description: OK
+      tags:
+        - flight-controller
 components:
   schemas:
     AddressDto:
